# corner-stitching

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt
data/: case1.txt
docs/: debug.txt
examples/: CMakeLists.txt  demo_example.cpp
scripts/: lcov_coverage.sh
src/: CMakeLists.txt
src/lcs/: CMakeLists.txt  definitions.hpp  functional.hpp  geometry.hpp  input.hpp  layout.hpp  lcs.hpp  utility.hpp
tests/: CMakeLists.txt  demo_test.cpp
tools/cmake/: utilities.cmake
